# YFinance

./: .env  main.py  pyproject.toml
