[project]
name = "yfinance_example"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "google-search-results>=2.4.2",
    "lxml>=6.0.2",
    "plotly>=6.3.1",
    "serpapi>=0.1.5",
    "streamlit>=1.50.0",
    "yfinance>=0.2.66",
]
